[package]
authors     = ["Chris Simpkins <git.simpkins@gmail.com>"]
description = "Recursive directory traversal file management tool"
edition     = "2018"
keywords    = ["file", "directory", "path", "search", "recursive"]
license     = "Apache-2.0"
name        = "recurse"
readme      = "README.md"
repository  = "https://github.com/chrissimpkins/recurse"
version     = "0.2.0-pre1"

[dependencies]
anyhow    = "1.0"
structopt = "0.3"
walkdir   = "2.3.1"
# rayon = "1.3"
colored = "1.9"
regex   = "1.3"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1"
