[package]
authors     = ["Chris Simpkins <git.simpkins@gmail.com>"]
description = "Recursive directory traversal file management tool"
edition     = "2018"
keywords    = ["file", "directory", "path", "search", "recursive"]
license     = "Apache-2.0"
name        = "recurse"
readme      = "README.md"
repository  = "https://github.com/chrissimpkins/recurse"
version     = "0.4.0-pre1"

[dependencies]
anyhow    = "1.0"
structopt = "0.3"
walkdir   = "2.3.2"
# rayon = "1.3"
colored = "2.0"
regex   = "1.5"

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "2"
